[gd_scene load_steps=16 format=3 uid="uid://1cyytqxdp81f"]

[ext_resource type="Script" path="res://enemy.gd" id="1_0suht"]
[ext_resource type="Texture2D" uid="uid://d0tdokphte70" path="res://sprites1.png" id="1_kklg7"]

[sub_resource type="Animation" id="Animation_wpue3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_6b52e"]
resource_name = "attack"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_yeyv8"]
resource_name = "attackEnemy"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [9, 13]
}

[sub_resource type="Animation" id="Animation_8l5f4"]
resource_name = "block"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_h1gtx"]
resource_name = "blockEnemy"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [10, 14]
}

[sub_resource type="Animation" id="Animation_evgng"]
resource_name = "dodge"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}

[sub_resource type="Animation" id="Animation_xsb4u"]
resource_name = "dodgeEnemy"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 12]
}

[sub_resource type="Animation" id="Animation_wxfgy"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_hgp63"]
resource_name = "idleEnemy"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 12]
}

[sub_resource type="Animation" id="Animation_ysj46"]
resource_name = "shove"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [19]
}

[sub_resource type="Animation" id="Animation_6mjc0"]
resource_name = "shoveEnemy"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t7o06"]
_data = {
"RESET": SubResource("Animation_wpue3"),
"attackChar": SubResource("Animation_6b52e"),
"attackEnemy": SubResource("Animation_yeyv8"),
"blockChar": SubResource("Animation_8l5f4"),
"blockEnemy": SubResource("Animation_h1gtx"),
"dodgeChar": SubResource("Animation_evgng"),
"dodgeEnemy": SubResource("Animation_xsb4u"),
"idleChar": SubResource("Animation_wxfgy"),
"idleEnemy": SubResource("Animation_hgp63"),
"shoveChar": SubResource("Animation_ysj46"),
"shoveEnemy": SubResource("Animation_6mjc0")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vhdkf"]

[node name="enemyNode2D" type="CharacterBody2D"]
script = ExtResource("1_0suht")

[node name="enemySprite2D" type="Sprite2D" parent="."]
modulate = Color(0.199732, 0.199732, 0.199732, 1)
texture = ExtResource("1_kklg7")
hframes = 8
vframes = 4
frame = 17

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemySprite2D"]
libraries = {
"": SubResource("AnimationLibrary_t7o06")
}

[node name="enemyTimer" type="Timer" parent="enemySprite2D"]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vhdkf")

[connection signal="timeout" from="enemySprite2D/enemyTimer" to="." method="_on_timer_timeout"]
